styling unification across footer pages/recipes/leaderboards/settings pages

--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -192,7 +192,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row" >
       <div class="col-md-8 col-md-offset-1">
         <div> 
           <label for="instructions">Cooking Instructions</label>
@@ -201,7 +201,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="padding-bottom: 15px;" >
       <div class="col-md-2 col-md-offset-1">
         <input value="Submit Recipe!" type="submit" class="btn btn-default">
       </div>
@@ -211,14 +211,13 @@
     </div>
   </form>
 
-
-  <footer class="modal-footer modal-footer-center" id="style">
-    <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
-  </footer>
-  
 </section>
+
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
 
 
 
