--- a/modules/recipes/client/views/list-recipes.client.view.html
+++ b/modules/recipes/client/views/list-recipes.client.view.html
@@ -20,10 +20,12 @@
     No recipes yet, why don't you <a ui-sref="recipes.create">create one</a>?
   </div>
 
-  <footer class="modal-footer modal-footer-center" id="style">
-    <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
-  </footer>
 
 </section>
+
+
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
