--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -1,4 +1,4 @@
-<section>
+<section id="style">
   <div class="page-header">
     <h1>User <span ng-bind="user.username"></span></h1>
   </div>
@@ -37,4 +37,7 @@
       </fieldset>
     </form>
   </div>
+
+
 </section>
+
