--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -41,7 +41,7 @@
           <button type="button" ng-click="removeAllergy($index)" class="glyphicon glyphicon-minus-sign" style="color:red"></button>
         </div>
         <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Save Profile</button>
+          <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Save Profile</button>
         </div>
         <div ng-show="success" class="text-center text-success">
           <strong>Profile Saved Successfully</strong>
