--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -1,5 +1,5 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center" id="style">
+  <div class="jumbotron text-center" id="style" style="margin: 0px;">
     <div class="row">
       <div class="col-sm-12 text-center">
         <h2 id="aboutheader">Meet our Developers!</h2>
@@ -75,7 +75,7 @@
     <div class="col-md-3"></div>
   </div>
 
-  <footer class="modal-footer modal-footer-center" id="style">
+  <footer class="modal-footer modal-footer-center" id="footerstyle">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
     <a ui-sref="mission" class="footer">Our Mission</a>
