--- a/modules/core/client/views/categories.client.view.html
+++ b/modules/core/client/views/categories.client.view.html
@@ -22,15 +22,11 @@
           </tr>
         </table>
     </div>
-<br>
-<br>
-<br>
-<div class="col-sm-12">
-  <footer class="modal-footer modal-footer-center">
-    <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
-  </footer>
-<br>
-</div>
+
 </section>
+
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
