--- a/modules/core/client/views/mission.client.view.html
+++ b/modules/core/client/views/mission.client.view.html
@@ -1,12 +1,12 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center" id="style">
+  <div class="jumbotron text-center" id="style" style="margin: 0px;">
     <div class="row" id="style">
       <div class="col-sm-12 text-center">
         <h2 id="aboutheader">Our Mission</h2>
       </div>
     </div>
   </div>
-  <div class="row" id="style">
+  <div class="row" id="style" style="padding-bottom: 50px;">
       <div class="col-md-1">
       </div>
       <div class="col-md-4">
@@ -25,10 +25,9 @@
   </div>
 
 
-  <footer class="modal-footer modal-footer-center" id="style">
-    <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
-  </footer>
-<br>
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
 </section>
