--- a/modules/leaderboards/client/views/list-leaderboards.client.view.html
+++ b/modules/leaderboards/client/views/list-leaderboards.client.view.html
@@ -64,7 +64,7 @@
   </div>
 -->
 
-  <footer class="modal-footer modal-footer-center" id="style">
+  <footer class="modal-footer modal-footer-center" id="footerstyle">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
     <a ui-sref="mission" class="footer">Our Mission</a>
