getting back all my original work
this is fun shit

--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -22,8 +22,8 @@
       <a class="btn btn-primary" ng-click="remove();">
         <i class="glyphicon glyphicon-trash"></i>
       </a>
-      <a class="btn btn-info" ng-click="">
-        <i class="glyphicon glyphicon-heart"> Healthify</i>
+      <a class="btn btn-info" ui-sref="recipes.healthify({recipeId: recipe._id})">
+        <i class="glyphicon glyphicon-heart" > Healthify</i>
       </a>
     </div>
   </div>
