--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -44,3 +44,9 @@
     </div>
   </section>
 </body>
+
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
