--- a/modules/categories/client/views/edit-categorie.client.view.html
+++ b/modules/categories/client/views/edit-categorie.client.view.html
@@ -26,3 +26,8 @@
     </form>
   </div>
 </section>
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
