--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <footer class="modal-footer modal-footer-center" id="style">
+  <footer class="modal-footer modal-footer-center" id="footerstyle">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
     <a ui-sref="mission" class="footer">Our Mission</a>
