Unifying styling, only have categories left to do

--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -4,7 +4,7 @@
     background: #F4F7D9;
     }
   </style>
-  <section ng-controller="CategoriesController">
+  <section ng-controller="CategoriesController" style="min-height: 100vh;">
     <div class="page-header">
       <h1>New Category</h1>
     </div>
