--- a/modules/leaderboards/client/views/list-leaderboards.client.view.html
+++ b/modules/leaderboards/client/views/list-leaderboards.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="LeaderboardsController" ng-init="find()">
+<section ng-controller="LeaderboardsController" ng-init="find()" style="height: 100vh;">
   <div class="page-header col-md-10 col-md-offset-1 text-center" id="recipeheader">
     <h1>Leaderboard</h1>
   </div>
