--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="RecipesController" ng-init="find()">
+<section ng-controller="RecipesController" ng-init="find()" style="height: 100vh;">
   <div class="page-header">
     <h1>Recipe Healthification</h1>
   </div>
