--- a/modules/recipes/client/views/list-recipes.client.view.html
+++ b/modules/recipes/client/views/list-recipes.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="RecipesController" ng-init="find()">
+<section ng-controller="RecipesController" ng-init="find()" style="min-height: 100vh;">
   <div class="page-header col-md-10 col-md-offset-1 text-center" id="recipeheader">
     <h1>List Recipes</h1>
   </div>
