--- a/modules/categories/client/views/edit-categorie.client.view.html
+++ b/modules/categories/client/views/edit-categorie.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="CategoriesController" ng-init="findOne()">
+<section ng-controller="CategoriesController" ng-init="findOne()" style="min-height: 100vh;">
   <div class="page-header">
     <h1>Edit Category</h1>
   </div>
