--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -1,46 +1,36 @@
-<body id="style">
-  <style>
-    body {
-    background: #F4F7D9;
-    }
-  </style>
-  <section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;">
-    <div class="row">
-      <div class="col-md-4" style="margin: auto">
-        <h2 class="text-center"><strong>Categories</strong></h2>
-          <div class="table-scrolling">
+
+<section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;">
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
+      <h2 class="text-center"><strong>C</strong>ategories</h2>
+        <div class="table-scrolling">
           <table class="table table-striped table-hover" id="table-border">
             <tr ng-repeat="category in categories | orderBy:'+name':false" ng-click="adjustFilter(categories.indexOf(category))">
               <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
               <td ng-click="remove(category)"><span style="color: red;" class="glyphicon glyphicon-remove"></span></td>
             </tr>
           </table>
-          </div>
-      </div>
-      <div class="col-md-8">
-        <h2 class="text-center"><strong>{{currentCategory.name}}</strong></h2>
-        <div class="table-scrolling">
-          <table class="table table-striped table-hover" id="table-border">
-            <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})">
-              <td>Posted on
-                <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
-                <h4 class="list-group-item-heading" ng-bind="recipe.title"></h4>
-              </td>
-              <td>
-                <span ng-bind="recipe.user.displayName"></span>
-                <p class="list-group-item-text" ng-bind="recipe.content"></p>
-              </td>
-            </tr>
-          </table>
         </div>
+    </div>
+    <div class="col-md-7">
+      <h2 class="text-center"><strong>{{currentCategory.name}}</strong></h2>
+      <div class="table-scrolling">
+        <table class="table table-striped table-hover" id="table-border">
+          <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})">
+            <td>Posted on
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <h4 class="list-group-item-heading" ng-bind="recipe.title"></h4>
+            </td>
+            <td>
+              <span ng-bind="recipe.user.displayName"></span>
+              <p class="list-group-item-text" ng-bind="recipe.content"></p>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
-    <div class="col-sm-12">
-
-      <br>
-    </div>
-  </section>
-</body>
+  </div>
+</section>
 
 <footer class="modal-footer modal-footer-center" id="footerstyle">
   <a ui-sref="contact" class="footer">Contact Us</a>
