--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -118,7 +118,6 @@ a:hover {
 }
 
 #center {
-  margin-left: auto;
   margin-right: auto;
 }
 
@@ -322,6 +321,8 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 
 #recipeheader {
   border-bottom: 2px solid #000;
+  font-size: 35px;
+  margin-top: 0px;
 }
 
 #bottomborder {
