--- a/modules/recipes/client/views/list-recipes.client.view.html
+++ b/modules/recipes/client/views/list-recipes.client.view.html
@@ -3,7 +3,7 @@
     <h1>List Recipes</h1>
   </div>
   <div class="row" id="style">
-    <div class="list-group col-md-8 col-md-offset-2">
+    <div class="list-group col-md-8 col-md-offset-2" style="max-height: 500px; overflow: auto;">
       <a ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})" class="list-group-item">
         <small class="list-group-item-text">
           Posted on
