--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -48,6 +48,7 @@
           </td>
           <td>
              <!-- display the healthier ingredients -->
+             {{healthify_ingredients[$index].name}}
           </td>
         </tr>
       </tbody>  
@@ -66,15 +67,15 @@
        <div class="modal-body">
         <table class="table table-striped table-hover">
           <!-- Add ng repeat stuff for array -->
-         <tr style="cursor: pointer;" ng-click="confirmHealthify($index);">
-           <td>{{healthify_ingredients.name}}</td>
+         <tr style="cursor: pointer;" ng-repeat="hi in healthify_ingredients" ng-click="confirmHealthify($index);">
+           <td>{{hi.name}}</td>
          </tr>
        </table>
  
        </div>
        <div class="modal-footer">
-         <span>Your Ingredient Is: {{healthIngredient.name}}</span>
-         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="">Okay!</button> <!--addIngredientLine()-->
+         <span>Your Ingredient Is: {{healthyIngredient.name}}</span>
+         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="addHealthyIngredients()">Okay!</button> <!--addIngredientLine()-->
       </div>
     </div>
  
@@ -88,5 +89,8 @@
       
       
       </table>
+  </div>
+  <div class="form-group">
+          <input type="submit" value="Update" class="btn btn-default">
   </div>
 </section>
