--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -3,94 +3,97 @@
     <h1>Recipe Healthification</h1>
   </div>
   
-  <div class="row">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <td>
-            <h3>Original Ingredient</h3>
-          </td>
-          <td>
-            <h3>Parameters</h3>
-          </td>
-          <td>
-            <h3>Minimize?</h3>
-          </td>
-          <td>
-            <h3>Healthify Ingredient</h3>
-          </td>
-          <td>
-            <h3>Alternative Ingredients</h3>
-          <td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="ingredient in recipe.orig_ing">
-          <td>
-            {{ingredient.item}}
-          </td>
-          <td>
-            <select name="nutrients" ng-model="parameters[$index]" class="selectpicker">
-              <!-- this right hurr is a drop down box with the nutrient names -->
-              <option ng-repeat="param in init_parameters">{{param.value}}</option>
-            </select>
-          </td>
-          <td>
-            <input name="minimize" ng-model="min_check[$index]" id="minimize" type="checkbox" value="false">
-            {{min_check[$index]}}
-              <!-- this checkbox determines whether we're finding alt ingredients that are greater/less than the current nutrient val -->
-            </input>
-          </td>
-          <td>
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" ng-click="findAlternatives($index, ingredient)" > 
-              <span class="glyphicon glyphicon-arrow-right"></span>
-            </button>
-          </td>
-          <td>
-             <!-- display the healthier ingredients -->
-             {{healthify_ingredients[$index].name}}
-          </td>
-        </tr>
-      </tbody>  
-    </table>
-  </div>
-
-<div id="myModal" class="modal fade" role="dialog">
-   <div class="modal-dialog">
- 
-     <!-- Modal content-->
-     <div class="modal-content">
-       <div class="modal-header">
-         <button type="button" class="close" data-dismiss="modal">&times;</button>
-         <h4 class="modal-title">Select Your Intended Ingredient</h4>
-       </div>
-       <div class="modal-body">
-        <table class="table table-striped table-hover">
-          <!-- Add ng repeat stuff for array -->
-         <tr style="cursor: pointer;" ng-repeat="hi in healthify_ingredients" ng-click="confirmHealthify($index);">
-           <td>{{hi.name}}</td>
-         </tr>
-       </table>
- 
-       </div>
-       <div class="modal-footer">
-         <span>Your Ingredient Is: {{healthyIngredient.name}}</span>
-         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="addHealthyIngredients()">Okay!</button> <!--addIngredientLine()-->
-      </div>
-    </div>
- 
-  </div>
-</div>
-    
-    
-  <div class="row">
-    <h3>Healthification Statistics</h3>
-      <table id="stats_table">
-      
-      
+  <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate>
+    <div class="row">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <td>
+              <h3>Original Ingredient</h3>
+            </td>
+            <td>
+              <h3>Parameters</h3>
+            </td>
+            <td>
+              <h3>Minimize?</h3>
+            </td>
+            <td>
+              <h3>Healthify Ingredient</h3>
+            </td>
+            <td>
+              <h3>Alternative Ingredients</h3>
+            <td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="ingredient in recipe.orig_ing">
+            <td>
+              {{ingredient.item}}
+            </td>
+            <td>
+              <select name="nutrients" ng-model="parameters[$index]" class="selectpicker">
+                <!-- this right hurr is a drop down box with the nutrient names -->
+                <option ng-repeat="param in init_parameters">{{param.value}}</option>
+              </select>
+            </td>
+            <td>
+              <input name="minimize" ng-model="min_check[$index]" id="minimize" type="checkbox" value="false">
+              {{min_check[$index]}}
+                <!-- this checkbox determines whether we're finding alt ingredients that are greater/less than the current nutrient val -->
+              </input>
+            </td>
+            <td>
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" ng-click="findAlternatives($index, ingredient)" > 
+                <span class="glyphicon glyphicon-arrow-right"></span>
+              </button>
+            </td>
+            <td>
+               <!-- display the healthier ingredients -->
+               {{healthify_ingredients[$index].name}}
+            </td>
+          </tr>
+        </tbody>  
       </table>
+    </div>
+
+  <div id="myModal" class="modal fade" role="dialog">
+     <div class="modal-dialog">
+   
+       <!-- Modal content-->
+       <div class="modal-content">
+         <div class="modal-header">
+           <button type="button" class="close" data-dismiss="modal">&times;</button>
+           <h4 class="modal-title">Select Your Intended Ingredient</h4>
+         </div>
+         <div class="modal-body">
+          <table class="table table-striped table-hover">
+            <!-- Add ng repeat stuff for array -->
+           <tr style="cursor: pointer;" ng-repeat="hi in healthify_ingredients" ng-click="confirmHealthify($index);">
+             <td>{{hi.name}}</td>
+           </tr>
+         </table>
+   
+         </div>
+         <div class="modal-footer">
+           <span>Your Ingredient Is: {{healthyIngredient.name}}</span>
+           <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="addHealthyIngredients()">Okay!</button> <!--addIngredientLine()-->
+        </div>
+      </div>
+   
+    </div>
   </div>
-  <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
-  </div>
+      
+      
+    <div class="row">
+      <h3>Healthification Statistics</h3>
+        <table id="stats_table">
+        
+        
+        </table>
+    </div>
+    <div class="form-group">
+      <input type="submit" value="Update" class="btn btn-default">
+    </div>
+  </form>
+  
 </section>
