Fixing the healthify stuff

--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -49,7 +49,7 @@
             </td>
             <td>
                <!-- display the healthier ingredients -->
-               {{healthify_ingredients[$index].name}}
+               {{recipe.healthy_ing[$index].name}}
             </td>
           </tr>
         </tbody>  
