--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -1,5 +1,5 @@
 
-<section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;">
+<section ng-controller="CategoriesController" id="style" ng-init="find(); findRecipes()" style="min-height: 100vh;">
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
       <h2 class="text-center"><strong>C</strong>ategories</h2>
@@ -7,7 +7,6 @@
           <table class="table table-striped table-hover" id="table-border">
             <tr ng-repeat="category in categories | orderBy:'+name':false" ng-click="adjustFilter(categories.indexOf(category))">
               <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
-              <td ng-click="remove(category)"><span style="color: red;" class="glyphicon glyphicon-remove"></span></td>
             </tr>
           </table>
         </div>
