Fixed lots of styling and the leaderboard ingredients

--- a/modules/chat/client/views/chat.client.view.html
+++ b/modules/chat/client/views/chat.client.view.html
@@ -1,5 +1,5 @@
 <!-- The chat view -->
-<section class="container" ng-controller="ChatController">
+<section class="container" ng-controller="ChatController" style="min-height:100vh" id="style">
   <div class="page-header">
     <h1>Chat Example</h1>
   </div>
@@ -27,3 +27,9 @@
     </li>
   </ul>
 </section>
+
+<footer class="modal-footer modal-footer-center" id="footerstyle">
+  <a ui-sref="contact" class="footer">Contact Us</a>
+  <a ui-sref="about" class="footer">About</a>
+  <a ui-sref="mission" class="footer">Our Mission</a>
+</footer>
