--- a/modules/recipes/client/views/edit-recipe.client.view.html
+++ b/modules/recipes/client/views/edit-recipe.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="RecipesController" ng-init="findOne()" style="height: 100vh;">
+<section ng-controller="RecipesController" ng-init="findOne()" style="min-height: 100vh;" id="style">
   <div class="page-header">
     <h1>Edit Recipes</h1>
   </div>
