--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -1,8 +1,8 @@
-<section ng-controller="RecipesController" ng-init="findOne()" style="height: 100vh;">
-  <div class="page-header">
+<section ng-controller="RecipesController" ng-init="findOne()" style="height: 100vh;" id="style">
+  <div class="page-header" style="margin: 0px; margin-left: auto; margin-right: auto; padding: 20px; border: 0px;">
     <h1>Recipe Healthification</h1>
   </div>
-  <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate>
+  <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate id="style">
     <div class="row">
       <table class="table table-striped">
         <thead>
@@ -64,7 +64,7 @@
            <button type="button" class="close" data-dismiss="modal">&times;</button>
            <h4 class="modal-title">Select Your Intended Ingredient</h4>
          </div>
-         <div class="modal-body">
+         <div class="modal-body" style="max-height: 400px; overflow: auto;">
           <table class="table table-striped table-hover">
             <!-- Add ng repeat stuff for array -->
            <tr style="cursor: pointer;" ng-repeat="hi in healthify_ingredients" ng-click="confirmHealthify($index);">
@@ -86,13 +86,13 @@
     <div class="row">
       <h3>Healthification Statistics</h3>
         <table id="stats_table">
-
-
         </table>
     </div>
-    <div class="form-group">
+
+    <div class="form-group row" style="padding: 30px;">
       <input type="submit" value="Update" class="btn btn-default">
     </div>
+
   </form>
 
 </section>
