--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -65,6 +65,12 @@
         <p class="" ng-bind="recipe.instructions"></p>
       </div>
     </div>
+    <div class="row" id="style">
+      <div class="col-md-4 col-md-offset-4">
+        <label style="font-size: 16px;">Picture:</label>
+          <img src="recipe.imgURL">
+      </div>
+    </div>
 </div>
 </section>
 <footer class="modal-footer modal-footer-center" id="footerstyle">
