--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -68,7 +68,7 @@
     <div class="row" id="style">
       <div class="col-md-4 col-md-offset-4">
         <label style="font-size: 16px;">Picture:</label>
-          <img src="recipe.imgURL">
+          <img ng-src="{{recipe.imgURL}}">
       </div>
     </div>
 </div>
