--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -1,10 +1,5 @@
 <body>
-  <style>
-    body {
-    background: #F4F7D9;
-    }
-  </style>
-  <section ng-controller="CategoriesController" style="min-height: 100vh;">
+  <section ng-controller="CategoriesController" id="style" style="min-height: 100vh;">
     <div class="page-header">
       <h1>New Category</h1>
     </div>
@@ -13,21 +8,21 @@
         <fieldset>
           <div class="form-group" show-errors>
             <label for="name">Name</label>
-            <input name="name" type="text" ng-model="name" id="name" class="form-control" placeholder="Name" required>
+            <input name="name" type="text" ng-model="currentCategory.name" id="name" class="form-control" placeholder="Name" required>
             <div ng-messages="categoryForm.title.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Category Name is required.</p>
             </div>
           </div>
           <div class="form-group">
             <label for="tag">Tag</label>
-            <input name="tag" type="text" ng-model="tag" id="tag" class="form-control" placeholder="Tag" required>
+            <input name="tag" type="text" ng-model="currentCategory.tag" id="tag" class="form-control" placeholder="Tag" required>
             <div ng-messages="categoryForm.title.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Category Tag is required.</p>
             </div>
           </div>
           <div class="form-group">
             <label for="img_path">Local Image Name</label>
-            <input name="img_path" type="text" ng-model="img_path" id="img_path" class="form-control" placeholder="Local Image Name" required>
+            <input name="img_path" type="text" ng-model="currentCategory.img_path" id="img_path" class="form-control" placeholder="Local Image Name" required>
             <p style="color: #F00">Note: all images will be prefixed with the path /modules/core/client/img/brand/. Store all photos there!</p>
             <div ng-messages="categoryForm.title.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Category Image Path is required.</p>
