--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -1,34 +1,24 @@
 
-<section ng-controller="CategoriesController" id="style" ng-init="find(); findRecipes()" style="min-height: 100vh;">
+<section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;" id="style">
   <div class="row">
-    <div class="col-md-3 col-md-offset-1">
-      <h2 class="text-center"><strong>C</strong>ategories</h2>
-        <div class="table-scrolling">
-          <table class="table table-striped table-hover" id="table-border">
-            <tr ng-repeat="category in categories | orderBy:'+name':false" ng-click="adjustFilter(categories.indexOf(category))">
-              <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
-            </tr>
-          </table>
-        </div>
-    </div>
-    <div class="col-md-7">
-      <h2 class="text-center">{{currentCategory.name}}</h2>
-      <div class="table-scrolling">
-        <table class="table table-striped table-hover" id="table-border">
-          <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})">
-            <td>Posted on
-              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
-              <h4 class="list-group-item-heading" ng-bind="recipe.title"></h4>
-            </td>
-            <td>
-              <span ng-bind="recipe.user.displayName"></span>
-              <p class="list-group-item-text" ng-bind="recipe.content"></p>
-            </td>
-          </tr>
-        </table>
-      </div>
+    <div class="col-md-6 col-md-offset-3 text-center" id="cattitle" style="margin-top: -2px;">
+      <h1><span>Browse by Category</span></h1>
     </div>
   </div>
+
+  <div>
+    <carousel interval="3000">
+      <slide ng-repeat="category in categories" active="category.active">
+        <div>
+          <img ui-sref="categories.view({categoryId: category._id})"ng-src="{{category.img_path}}" style="height: 600px; width: 850px; display: block; margin-left: auto; margin-right: auto;">
+        </div>
+        <div class="carousel-caption" style="bottom: 500px">
+          <h2 style="color: #000; font-size: 50px;"><strong>{{ category.name }}</strong></h2>
+        </div>
+      </slide>
+    </carousel>
+  </div>
+
 </section>
 
 <footer class="modal-footer modal-footer-center" id="footerstyle">
