--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -86,7 +86,7 @@ a:hover .header-profile-image {
   height: 100%;
 }
 
-#style2 {
+.style2 {
   /*background-color: #F4F7D9;*/
   z-index: -2;
 }
@@ -96,9 +96,9 @@ a:hover .header-profile-image {
 #footerstyle {
   background-color: #3e423a;
   color: #F4F7D9;
-  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  -moz-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
 }
 
 a {
@@ -139,14 +139,14 @@ a:hover {
   top: 425px;
   background-color: #6c6e58;
   z-index: -1;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
-  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
+  -webkit-box-shadow: 0 0 20px 0 rgba(0,0,0,0.85);
+  -moz-box-shadow: 0 0 20px 0 rgba(0,0,0,0.85);
+  box-shadow: 0 0 20px 0 rgba(0,0,0,0.85);
 }
 
 #food {
   position: absolute;
-  top: 285px;
+  top: 100px;
   left: 5%;
   border:1px;
   border-radius: 100px;
@@ -154,9 +154,9 @@ a:hover {
   max-width: 400px;
   width: 30%;
   height: 40%;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 0 15px 0 rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 0 15px 0 rgba(0,0,0,0.75);
+  box-shadow: 0 0 15px 0 rgba(0,0,0,0.75);
   z-index: 1;
 }
 
@@ -180,7 +180,7 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
   /*position: absolute;
   top: 40px; 
   left: 24%;*/
-
+  top: 100px;
   max-height: 50%;
   max-width: 40%;
   margin-right: 10%;
@@ -193,9 +193,9 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
   margin-top: 7.5%; 
 
-  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  -moz-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
 }
 #overlay-two {
   /*position: absolute;
@@ -281,7 +281,7 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
 #newListing {
-  margin: 5px 0px 0px 5px; 
+  margin: 5px 0 0 5px; 
 }
 
 #details {
@@ -321,7 +321,7 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 #recipeheader {
   border-bottom: 2px solid #000;
   font-size: 35px;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 #bottomborder {
@@ -358,60 +358,6 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
   margin-bottom: 2%;
 }
 
-/* This code is modified from Ali Jafarian's tutorial (source: http://alijafarian.com/responsive-image-grids-using-css/) */
-
-ul.rig {
-  list-style: none;
-  font-size: 0px;
-  margin-left: -2.5%; /* should match li left margin */
-}
-ul.rig li {
-  max-height: 15%;
-  display: inline-block;
-  margin: 0 0 2.5% 2.5%;
-  background: #EDEACD;
-  font-size: 16px;
-  font-size: 1rem;
-  vertical-align: top;
-  box-shadow: 0 0 5px #ddd;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-}
-ul.rig li img {
-  max-width: 100%;
-  width: 100%;
-  height: 300px;
-  max-height: 100%;
-  margin: 0 0 10px;
-}
-ul.rig li h3 {
-  margin: 0 0 5px;
-}
-/* class for 3 columns */
-ul.rig.columns-3 li {
-  width: 30%; /* this value + 2.5 should = 33% */
-}
-
-@media (max-width: 480px) {
-  ul.grid-nav li {
-    display: block;
-    margin: 0 0 5px;
-  }
-  ul.grid-nav li a {
-    display: block;
-  }
-  ul.rig {
-    margin-left: 0;
-  }
-  ul.rig li {
-    width: 100% !important; /* over-ride all li styles */
-    margin: 0 0 20px;
-  }
-}
-
-/* End of Ali Jafarian's code (source: http://alijafarian.com/responsive-image-grids-using-css/) */
-
 #cattitle {
   margin-top: 4%;
 }
@@ -424,7 +370,7 @@ h1 span {
   background: rgba(25, 23, 24, 0.85);
   padding: 10px; 
 
-  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
-  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  -moz-box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
+  box-shadow: 0 0 7px 0 rgba(0,0,0,0.7);
 }
