Some styling changes

--- a/modules/categories/client/views/view-categorie.client.view.html
+++ b/modules/categories/client/views/view-categorie.client.view.html
@@ -1,12 +1,12 @@
 <body>
-  <section ng-controller="CategoriesController" ng-init="findOne(); findRecipes()" style="min-height: 100vh; margin: 0;" id="style" >
+  <section ng-controller="CategoriesController" ng-init="findOne(); findRecipes()" style="min-height: 100vh; margin: 0;" id="style">
     <div class="col-md-6 col-md-offset-3 text-center" id="cattitle" style="margin-top: -1px;">
       <h1><span>{{category.name}}</span></h1>
     </div>
     <div class="row" ng-repeat="recipe in recipes track by $index" ng-if="$index % 4 == 0">
     <div class="col-xs-3" ng-repeat="i in [$index, $index + 1, $index + 2, $index + 3]" ng-if="recipes[i] != null">
-      <h2 style="margin-top: 0; margin-bottom: 0;"><span>{{recipe.title}}</span></h2>
-      <img id="recipe-img" src="{{recipes[i].imgURL}}">  
+      <img id="recipe-img" src="{{recipes[i].imgURL}}" ui-sref="recipes.view({recipeId: recipes[i]._id})">  
+      <h2 style="margin-top: 0; margin-bottom: 0;"><span>{{recipes[i].title}}</span></h2>
       <br>
     </div>
   </div>
