--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -1,25 +1,25 @@
-
-<section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;" id="style">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 text-center" id="cattitle" style="margin-top: -2px;">
-      <h1><span>Browse by Category</span></h1>
+<body>
+  <section ng-controller="CategoriesController" ng-init="find(); findRecipes()" style="min-height: 100vh;" id="style">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center" id="cattitle" style="margin-top: -2px;">
+        <h1><span>Browse by Category</span></h1>
+      </div>
     </div>
-  </div>
 
-  <div>
-    <carousel interval="3000">
-      <slide ng-repeat="category in categories" active="category.active">
-        <div>
-          <img ui-sref="categories.view({categoryId: category._id})"ng-src="{{category.img_path}}" style="height: 600px; width: 850px; display: block; margin-left: auto; margin-right: auto;">
-        </div>
-        <div class="carousel-caption" style="bottom: 500px">
-          <h2 style="color: #000; font-size: 50px;"><strong>{{ category.name }}</strong></h2>
-        </div>
-      </slide>
-    </carousel>
-  </div>
-
-</section>
+    <div>
+      <carousel interval="4000" id="category-img" style="">
+        <slide ng-repeat="category in categories" active="category.active" id="slideStyle">
+          <div>
+            <img ui-sref="categories.view({categoryId: category._id})"ng-src="{{category.img_path}}" id="category-img">
+          </div>
+          <div class="carousel-caption" style="bottom: 20px">
+            <h3><span>{{ category.name }}</span></h3>
+          </div>
+        </slide>
+      </carousel>
+    </div>
+  </section>
+</body>
 
 <footer class="modal-footer modal-footer-center" id="footerstyle">
   <a ui-sref="contact" class="footer">Contact Us</a>
