--- a/modules/recipes/client/views/users-personal-recipes.client.view.html
+++ b/modules/recipes/client/views/users-personal-recipes.client.view.html
@@ -1,10 +1,10 @@
 <section ng-controller="RecipesController" id="style" ng-init="find()" style="min-height: 100vh;">
   <div class="page-header col-md-10 col-md-offset-1 text-center" id="recipeheader">
-    <h1>List Recipes</h1>
+    <h1>My Recipes</h1>
   </div>
   <div class="row">
     <div class="list-group col-md-8 col-md-offset-2" style="max-height: 500px; overflow: auto;">
-      <a ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})" class="list-group-item">
+      <a ng-repeat="recipe in recipes | filter: myFilter" ui-sref="recipes.view({recipeId: recipe._id})" class="list-group-item">
         <small class="list-group-item-text">
           Posted on
           <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
