--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -38,13 +38,15 @@
             <th>Quantity</th>
             <th>Unit</th>
             <th>Ingredient</th>
+            <th>Healthified Ingredients</th>
           </tr>
         </thead>
         <tbody>
           <tr ng-repeat="ingredient in recipe.orig_ing">
             <td>{{ingredient.quantity}}</td>
             <td>{{ingredient.unit}}</td>
-            <td>{{ingredient.item}}</td>
+            <td>{{ingredient.food_item.name}}</td>
+            <td>{{recipe.healthy_ing[$index].food_item.name}}</td>
           </tr>
         </tbody>
       </table>
@@ -68,7 +70,7 @@
     <div class="row" id="style">
       <div class="col-md-4 col-md-offset-4">
         <label style="font-size: 16px;">Picture:</label>
-          <img src="recipe.imgURL">
+          <img ng-src="recipe.imgURL">
       </div>
     </div>
 </div>
