--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -1,5 +1,5 @@
 
-<section ng-controller="RecipesController" ng-init="findOne()" style="min-height: 100vh;" id="style" >
+<section ng-controller="RecipesController" ng-init="findOne(); printTags()" style="min-height: 100vh;" id="style" >
   <div style="min-height: 100vh;">
     <div class="row" id="style">
       <div class="page-header col-md-10 col-md-offset-1 text-center" id="recipeheader">
