--- a/modules/categories/client/views/view-categorie.client.view.html
+++ b/modules/categories/client/views/view-categorie.client.view.html
@@ -2,14 +2,18 @@
   <section ng-controller="CategoriesController" ng-init="findOne(); findRecipes()" style="min-height: 100vh; margin: 0;" id="style">
     <div class="col-md-6 col-md-offset-3 text-center" id="cattitle" style="margin-top: -1px;">
       <h1><span>{{category.name}}</span></h1>
+      <!-- <a class="btn btn-primary" ng-click="remove();">
+        <i class="glyphicon glyphicon-trash"></i>
+      </a>
+      <br> -->
     </div>
-    <div class="row" ng-repeat="recipe in recipes track by $index" ng-if="$index % 4 == 0">
-    <div class="col-xs-3" ng-repeat="i in [$index, $index + 1, $index + 2, $index + 3]" ng-if="recipes[i] != null">
-      <img id="recipe-img" src="{{recipes[i].imgURL}}" ui-sref="recipes.view({recipeId: recipes[i]._id})">  
-      <h2 style="margin-top: 0; margin-bottom: 0;"><span>{{recipes[i].title}}</span></h2>
-      <br>
+    <div class="row" style="padding: 2px;" ng-repeat="recipe in recipes track by $index" ng-if="$index % 4 == 0">
+      <span class="col-md-3" style="padding: 0;" ng-repeat="i in [$index, $index + 1, $index + 2, $index + 3]" ng-if="recipes[i] != null">
+        <img id="recipe-img" src="{{recipes[i].imgURL}}" ui-sref="recipes.view({recipeId: recipes[i]._id})">  
+        <h2 style="margin-top: 0; margin-bottom: 0;"><span>{{recipes[i].title}}</span></h2>
+        <br>
+      </span>
     </div>
-  </div>
 
   </section>
 </body>
